[gd_scene load_steps=5 format=2]

[ext_resource path="res://asset/prstart.ttf" type="DynamicFontData" id=1]
[ext_resource path="res://Pause_menu/Pause.gd" type="Script" id=2]

[sub_resource type="DynamicFont" id=2]
size = 138
font_data = ExtResource( 1 )

[sub_resource type="DynamicFont" id=1]
size = 91
font_data = ExtResource( 1 )

[node name="Pause" type="Control"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -960.0
margin_top = -540.0
margin_right = 960.0
margin_bottom = 540.0
script = ExtResource( 2 )

[node name="Label" type="Label" parent="."]
anchor_left = 0.5
anchor_right = 0.5
margin_left = -960.0
margin_top = 50.0
margin_right = 960.0
margin_bottom = 194.0
custom_fonts/font = SubResource( 2 )
text = "Game Paused"
align = 1

[node name="VBoxContainer" type="VBoxContainer" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -480.0
margin_top = -200.0
margin_right = 480.0
margin_bottom = 200.0

[node name="Continue" type="Button" parent="VBoxContainer"]
margin_right = 960.0
margin_bottom = 20.0

[node name="Label" type="Label" parent="VBoxContainer/Continue"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -364.0
margin_top = -46.0
margin_right = 364.0
margin_bottom = 46.0
custom_fonts/font = SubResource( 1 )
text = "Continue"

[node name="Settings" type="Button" parent="VBoxContainer"]
margin_top = 24.0
margin_right = 960.0
margin_bottom = 44.0

[node name="Label" type="Label" parent="VBoxContainer/Settings"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -364.0
margin_top = -46.0
margin_right = 364.0
margin_bottom = 46.0
custom_fonts/font = SubResource( 1 )
text = "Settings"

[node name="Main_Menu" type="Button" parent="VBoxContainer"]
margin_top = 48.0
margin_right = 960.0
margin_bottom = 68.0

[node name="Label" type="Label" parent="VBoxContainer/Main_Menu"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -170.0
margin_top = -46.0
margin_right = 558.0
margin_bottom = 46.0
custom_fonts/font = SubResource( 1 )
text = "Exit"

[connection signal="pressed" from="VBoxContainer/Continue" to="." method="_on_Continue_pressed"]
[connection signal="pressed" from="VBoxContainer/Settings" to="." method="_on_Settings_pressed"]
[connection signal="pressed" from="VBoxContainer/Main_Menu" to="." method="_on_Main_Menu_pressed"]
